<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:includeFontPadding="false"
            android:text="@string/code"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/siyah"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extrabold"
            android:includeFontPadding="false"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/siyah"
            android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_light"
            android:includeFontPadding="false"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/koyugri"
            android:textSize="16sp" />

       <com.chaos.view.PinView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:itemWidth="50dp"
           app:itemHeight="50dp"
           android:layout_gravity="center"
           android:id="@+id/pinvieww"
           android:layout_marginTop="30dp"
           app:lineColor="@color/koyugri"
           android:itemBackground="@color/whitelight"
           app:itemCount="6"
           style="@style/PinWidget.PinView"
           android:inputType="number"
           android:cursorVisible="true"
           app:cursorColor="@color/siyah"
           app:hideLineWhenFilled="true"
           app:itemRadius="5dp"

/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turuncu"
            android:text="@string/verify_code"
            android:layout_marginTop="30dp"
            android:textColor="@color/siyah"/>


    </LinearLayout>

</ScrollView>