<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/opensans"
        android:text="Already have an account? Log in"
        android:textColor="@color/koyugri"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="43dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/input_field"
        android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColorHint="@color/hint"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/username"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="260dp"
        android:background="@drawable/input_field"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/hint"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/register"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/input_register"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/beyaz"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/input_field"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/hint"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/input_field"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColorHint="@color/hint"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/monslogo"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/logoname"
        android:textColor="@color/siyah"
        android:textSize="37dp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="52dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="53dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="139dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="675dp" />

</androidx.constraintlayout.widget.ConstraintLayout>